--- a/src/components/game/settings/RoomSettings.css
+++ b/src/components/game/settings/RoomSettings.css
@@ -1,10 +1,6 @@
 .room-settings {
     position: fixed;
-    padding: 20px;
-    background-color: var(--dark-color);
-    border-radius: 20px;
     z-index: 2;
-    box-shadow: 0px 0px 10px var(--dark-color);
 }
 
 .room-settings-info h1 {
@@ -59,4 +55,20 @@
         right: 50px;
         bottom: 120px;
     }
+}
+
+.open-card-stack-button {
+    padding: 10px;
+    font-size: 20px;
+}
+
+.card-stack-edit-container {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    max-width: 90%;
+    width: 90%;
+    height: 90%;
+    overflow-y: hidden;
 }
