--- a/src/components/input/SwitchInput.css
+++ b/src/components/input/SwitchInput.css
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
+    border: none;
 }
 
 .switch-input:not(.switch-input-disabled):hover {
