--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,9 @@ button:hover {
   border-radius: 10px;
   box-shadow: 0px 0px 10px black;
   transition: scale 0.1s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .basic-button {
   padding: 10px;
