--- a/src/components/game/settings/carddeckedit/carddeckeditor/CardDeckEditor.css
+++ b/src/components/game/settings/carddeckedit/carddeckeditor/CardDeckEditor.css
@@ -1,9 +1,9 @@
-.card-stack-editor {
+.card-deck-editor {
     width: 100%;
     height: 100%;
 }
 
-.card-stack-edit-page {
+.card-deck-edit-page {
     width: 100%;
     height: 100%;
     display: flex;
@@ -11,26 +11,26 @@
     gap: 20px;
 }
 
-.card-stack-edit-controls {
+.card-deck-edit-controls {
     display: flex;
     justify-content: space-between;
     width: 100%;
     z-index: 3;
 }
 
-.card-stack-edit-controls h1 {
+.card-deck-edit-controls h1 {
     color: var(--primary-color);
 }
-.card-stack-edit-controls p {
+.card-deck-edit-controls p {
     color: gray;
 }
 
-.card-stack-edit-buttons {
+.card-deck-edit-buttons {
     display: flex;
     gap: 10px;
 }
 
-.card-stack-edit-content {
+.card-deck-edit-content {
     flex-grow: 1;
     min-height: 0;
     border-radius: 10px;
