--- a/src/components/game/round/round/Round.css
+++ b/src/components/game/round/round/Round.css
@@ -24,3 +24,21 @@
     display: flex;
     justify-content: center;
 }
+
+.round-controls-container {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.color-picker-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
