--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -32,13 +32,18 @@
 .top, .bottom {
     position: absolute;
     font-size: 35px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .top {
-    top: -5px;
-    left: 5px;
+    top: 0px;
+    left: 0px;
 }
 .bottom {
-    bottom: -5px;
-    right: 5px;
+    bottom: 0px;
+    right: 0px;
     rotate: 180deg;
 }
