--- a/src/components/game/round/opponentinventory/OpponentInventory.css
+++ b/src/components/game/round/opponentinventory/OpponentInventory.css
@@ -1,4 +1,5 @@
 .opponent-inventory {
+    position: relative;
     text-align: center;
     height: 200px;
 }
@@ -10,8 +11,8 @@
     top: 20px;
 }
 
-.opponent-inventory-cards-container.active-opponent-inventory {
-    scale: 0.45;
+.active-opponent-inventory .opponent-inventory-cards-container{
+    scale: 0.5;
 }
 
 .opponent-inventory-card-container {
@@ -23,6 +24,9 @@
 
 .opponent-inventory-player-name {
     color: var(--primary-color);
+}
+.active-opponent-inventory .opponent-inventory-player-name {
+    color: var(--negative-color);
 }
 
 .opponent-inventory-number-card {
@@ -36,7 +40,8 @@
     justify-content: center;
     align-items: center;
 }
-.opponent-inventory-number-card.active-opponent-inventory {
+
+.active-opponent-inventory .opponent-inventory-number-card {
     scale: 1.4;
 }
 
@@ -51,4 +56,14 @@
     .opponent-inventory-small {
         display: block;
     }
+}
+
+.ack-last-card {
+    padding: 10px;
+    border-radius: 10px;
+    background: linear-gradient(90deg, hsla(350, 93%, 61%, 1) 0%, hsla(8, 98%, 59%, 1) 100%);
+    position: absolute;
+    left: 50%;
+    top: 60px;
+    transform: translateX(-50%) rotate(-30deg);
 }
