--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
+@font-face {
+  font-family: "Fugaz One";
+  src: url("../public/FugazOne-Regular.ttf");
+}
 
 body, html {
   margin: 0px;
