--- a/src/components/game/chat/message/Message.css
+++ b/src/components/game/chat/message/Message.css
@@ -28,7 +28,7 @@
     color: var(--negative-color);
     background-color: transparent;
     border: none;
-    font-weight: 800;
+    font-weight: bold;
 }
 .delete-message-button:hover {
     cursor: pointer;
