--- a/src/components/game/round/opponentinventory/OpponentInventory.css
+++ b/src/components/game/round/opponentinventory/OpponentInventory.css
@@ -67,3 +67,12 @@
     top: 60px;
     transform: translateX(-50%) rotate(-30deg);
 }
+
+.reaction {
+    font-size: 45px;
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    transform: translateX(-50%);
+    text-shadow: 0px 0px 10px black;
+}
