--- a/src/components/game/room/Room.css
+++ b/src/components/game/room/Room.css
@@ -44,3 +44,16 @@
         display: none;
     }
 }
+
+
+#particles-container {
+    position: fixed;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+
+#ts-particles {
+    width: 100%;
+    height: 100%;
+}
