--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -48,6 +48,11 @@
     rotate: 180deg;
 }
 
+.front div:not(.top):not(.bottom) #wish-text {
+    width: 40px;
+    height: 40px;
+}
+
 #wish-text {
     width: 30px;
     height: 30px;
