--- a/src/components/game/round/pile/Pile.css
+++ b/src/components/game/round/pile/Pile.css
@@ -1,4 +1,5 @@
 .pile {
+    position: relative;
     width: 130px;
     height: 200px;
 }
@@ -16,4 +17,15 @@
 .pile-card-clickable:hover, .pile-card-clickable:focus {
     scale: 1.05;
     cursor: pointer;
+}
+
+.draw-draw-stack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
